pytigon-docker/kubernetes/pytigon-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pytigon-deployment
  labels:
    app: pytigon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pytigon
  template:
    metadata:
      labels:
        app: pytigon
    spec:
      containers:
        - name: pytigon
          image: splawik/docker-pytigon:latest
          ports:
            - containerPort: 80
          resources:
          #  limits:
          #    memory: "512Mi"
          #    cpu: "250m"
          volumeMounts:
            - mountPath: /home/www-data/.pytigon
              name: www-data
      volumes:
        - name: www-data
          persistentVolumeClaim:
            claimName: www-data
