pytigon-docker/kubernetes/pytigon-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pytigon-service
spec:
  selector:
    app: pytigon
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
