pytigon-docker/kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: NodePort
  selector:
    app: redis
  ports:
    - name: redis-port
      protocol: TCP
      port: 6379
      targetPort: 6379
      nodePort: 30379
