pytigon-docker/kubernetes/pytigon-ingress.yaml
apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: pytigon-ingress
    namespace: default
    annotations:
      kubernetes.io/ingress.class: nginx
  spec:
    rules:
      - host: ???
        http:
          paths:
            - backend:
                serviceName: pytigon-service
                servicePort: 80
              path: /
    #tls:
    #    - hosts:
    #        - ???
    #      secretName: pytigon.cloud
